Fix wrapping for long titles in add pane dialog

--- a/css/panels_dnd.css
+++ b/css/panels_dnd.css
@@ -246,6 +246,7 @@ a.close img {
 }
 
 .content-type-button div {
+  width: 85%;
   top: -5px;
   left: 2px;
   float: left;
